<resources>
    <string name="app_name">Prank Caller</string>
    <string name="home">Home</string>
    <string name="register">Register</string>
    <string name="history">History</string>
    <string name="phone_num_hint">Enter in your phone number</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="random">Random</string>
    <string name="no_account">Don\'t have an account? Enter in your phone number and password and hit register to register now!
    </string>
    <string name="receiver_num_hint">Enter in a number to receive a call</string>
    <string name="call">Call</string>
    <string name="loading">Loading...</string>
    <string name="calling">Making call...</string>

    <string-array name="main_icon_array">
        <item>@string/fa_icon_home</item>
        <item>@string/fa_icon_history</item>
    </string-array>

    <string-array name="main_array">
        <item>@string/home</item>
        <item>@string/history</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Ad keys -->
    <string name="test_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="main_ad_unit_id">ca-app-pub-3366431309616914/5077624387</string>
    <string name="register_ad_unit_id">ca-app-pub-3366431309616914/3173585580</string>
    <string name="dialog_ad_unit_id">ca-app-pub-3366431309616914/5186115181</string>

    <string name="call_made">A call has been made!</string>
    <string name="call_not_made">Unable to make call. Try again later.</string>

    <!--Ads strings-->
    <string name="ad_dialog_title">Unable to fully load application</string>
    <string name="ad_dailog_msg">Application will now close.</string>
    <string name="ok">OK</string>

    <string name="get_history_failed">Unable to retrieve history. Please try again later.</string>
    <string name="no_history">No history to display.</string>
    <string name="login_for_history">You must login in order to see your history.</string>

    <string name="verify">Verify your account (press here)</string>
    <string name="verify_hint">Confirmation code</string>
    <string name="verify_text">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="code_too_short">Invalid code (too short)</string>

    <string name="account_activated">Account is now active!</string>
    <string name="activation_failed">Unable to activate account. Try again later.</string>
    <string name="permission_denied">Permission denied.</string>
    <string name="no_contacts">You have no contacts.</string>
</resources>
